--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.5",
     "@heroicons/react": "^2.0.13",
+    "bootstrap": "^5.2.3",
+    "jquery": "^3.6.2",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
