--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@headlessui/react": "^1.7.5",
     "@heroicons/react": "^2.0.13",
+    "@splidejs/react-splide": "^0.7.12",
     "bootstrap": "^5.2.3",
-    "jquery": "^3.6.2",
+    "jquery": "^3.6.3",
     "next": "13.0.6",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
+    "react-owl-carousel": "^2.3.3",
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
